--- a/ubuntu_commad.html
+++ b/ubuntu_commad.html
@@ -63,7 +63,7 @@
         data-chapter-title="命令"
         data-filepath="ubuntu_commad.md"
         data-basepath="."
-        data-revision="Thu Aug 04 2016 10:13:13 GMT+0800 (CST)"
+        data-revision="Thu Aug 04 2016 10:15:04 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -760,7 +760,7 @@
 <li><a href="#&#x5185;&#x5B58;">&#x5185;&#x5B58;</a></li>
 <li><a href="#tree">tree</a></li>
 <li><a href="#whereis">whereis</a></li>
-<li><a href="#du_df"><code>du df</code> - &#x67E5;&#x770B;&#x786C;&#x76D8;&#x7A7A;&#x95F4;</a></li>
+<li><a href="#du-df"><code>du df</code> - &#x67E5;&#x770B;&#x786C;&#x76D8;&#x7A7A;&#x95F4;</a></li>
 </ul>
 <h3 id="scp"><a name="scp" class="plugin-anchor" href="#scp"><span class="fa fa-link"></span></a>scp</h3>
 <p>&#x8FDB;&#x884C;&#x8FDC;&#x7A0B;&#x62F7;&#x8D1D;</p>
