--- a/ubuntu_commad.html
+++ b/ubuntu_commad.html
@@ -63,7 +63,7 @@
         data-chapter-title="命令"
         data-filepath="ubuntu_commad.md"
         data-basepath="."
-        data-revision="Thu Aug 04 2016 10:20:34 GMT+0800 (CST)"
+        data-revision="Thu Aug 04 2016 10:22:03 GMT+0800 (CST)"
         data-innerlanguage="">
     
 
@@ -855,8 +855,8 @@ ifconfig eth0 up
 <p>&#x67E5;&#x770B;&#x786C;&#x76D8;&#x7A7A;&#x95F4;</p>
 <ul>
 <li><code>df -h</code> - &#x67E5;&#x770B;&#x5404;&#x5206;&#x533A;&#x5927;&#x5C0F;</li>
-<li><code>df -sh dir</code> - &#x67E5;&#x770B; dir &#x76EE;&#x5F55;&#x5927;&#x5C0F;</li>
-<li><code>df -sh *</code> - &#x67E5;&#x770B;&#x5F53;&#x524D;&#x76EE;&#x5F55;&#x4E0B;&#x7684;&#x6587;&#x4EF6;&#x548C;&#x5B50;&#x76EE;&#x5F55;&#x5927;&#x5C0F;</li>
+<li><code>du -sh dir</code> - &#x67E5;&#x770B; dir &#x76EE;&#x5F55;&#x5927;&#x5C0F;</li>
+<li><code>du -sh *</code> - &#x67E5;&#x770B;&#x5F53;&#x524D;&#x76EE;&#x5F55;&#x4E0B;&#x7684;&#x6587;&#x4EF6;&#x548C;&#x5B50;&#x76EE;&#x5F55;&#x5927;&#x5C0F;</li>
 </ul>
 
                     
