--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     const gitalk = new Gitalk({
         clientID: '3dbc9aae63357c968d07',
         clientSecret: '67d4f12da747c7b3fe7aee447016508eac101974',
-        repo: 'comment',
+        repo: 'notes',
         owner: 'zhangjikai',
         admin: ['zhangjikai'],
         // facebook-like distraction free mode
