--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 <script>
     const gitalk = new Gitalk({
-        clientID: '3dbc9aae63357c968d07',
-        clientSecret: '67d4f12da747c7b3fe7aee447016508eac101974',
+        clientID: 'Iv1.493ea1871e632724',
+        clientSecret: '1bf12e179bc46ee5d7f469b0dbf7ca1c20d650c5',
         repo: 'notes',
         owner: 'zhangjikai',
         admin: ['zhangjikai'],
