--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 <script>
     const gitalk = new Gitalk({
-        clientID: 'Iv1.493ea1871e632724',
-        clientSecret: '1bf12e179bc46ee5d7f469b0dbf7ca1c20d650c5',
+        clientID: '50e084bdd0cdc796bc78',
+        clientSecret: '872e784b58329de3eab105528488e78358758ef9',
         repo: 'notes',
         owner: 'zhangjikai',
         admin: ['zhangjikai'],
