--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>docsify</title>
+    <title>笔记</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="//unpkg.com/docsify-copy-code/styles.css">
-    <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
     <link href="http://cdn.bootcss.com/highlight.js/9.9.0/styles/github.min.css" rel="stylesheet">
     <link href="http://cdn.bootcss.com/prism/9000.0.1/themes/prism.min.css" rel="stylesheet">
     <link href="http://cdn.bootcss.com/prism/9000.0.1/plugins/line-numbers/prism-line-numbers.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/vue.css" title="vue">
+    <link rel="stylesheet" href="assets/css/vue.css" title="vue">
     <style>
         nav.app-nav li ul {
             min-width: 100px;
@@ -25,11 +24,15 @@
 
 <script>
     window.$docsify = {
-        // alias: {
-        //     '.*?/changelog': 'https://raw.githubusercontent.com/QingWei-Li/docsify/master/CHANGELOG',
-        //     '/.*/_navbar.md': '/_navbar.md'
-        // },
+        search: {
+            placeholder: '搜索',
+            noData: "无结果"
+        },
+        alias: {
+            '/.*/_sidebar.md': '/_sidebar.md'
+        },
         auto2top: true,
+        repo: 'zhangjikai/notes',
         basePath: '',
         executeScript: true,
         loadNavbar: false,
@@ -42,30 +45,14 @@
         showLevel: true,
         tocLevel: 3,
         plugins: [
-            function (hook, vm) {
-                hook.beforeEach(function (html) {
-                    // console.log(vm.compiler.toc)
-                    //console.log(html)
-                    // vm.compiler._calTocStart(html);
-                    return html
-                        + '\n---\n'
-                        + '最后修改时间 {docsify-updated} '
-                })
-                hook.afterEach((html) => {
-                    // console.log(vm.render);
-                    // console.log(html)
-                    // html = ""
-                    // console.log(vm.compiler.toc)
-                })
-            },
             window.DocsifyCopyCodePlugin.init()
-
         ]
     }
 </script>
 <script src="assets/docsify.min.js"></script>
-<script src="plugins/highlight.min.js"></script>
+<script src="assets/plugins/highlight.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
+<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
 </html>
