--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div id="app"></div>
 
-
+<!-- <script src="//unpkg.com/docsify-copy-code/index.js"></script> -->
 
 
 <script>
@@ -53,6 +53,6 @@
 <script src="assets/plugins/highlight.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
-<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+
 </body>
 </html>
