--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         showLevel: true,
         tocLevel: 3,
         plugins: [
-            window.DocsifyCopyCodePlugin.init()
+            // window.DocsifyCopyCodePlugin.init()
         ]
     }
 </script>
