--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
         loadNavbar: false,
         loadSidebar: true,
         coverpage: false,
-        name: '',
         subMaxLevel: 2,
         mergeNavbar: false,
         formatUpdated: '{YYYY}-{MM}-{DD}',
         showLevel: true,
         tocLevel: 3,
+        ext: ".md",
+        paths: 'auto',
         plugins: [
             // window.DocsifyCopyCodePlugin.init()
         ]
