--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div id="app"></div>
 
-<script src="//unpkg.com/docsify-copy-code/index.js"></script>
+<!-- <script src="//unpkg.com/docsify-copy-code/index.js"></script> -->
 
 
 <script>
@@ -38,14 +38,15 @@
         loadNavbar: false,
         loadSidebar: true,
         coverpage: false,
-        name: '',
         subMaxLevel: 2,
         mergeNavbar: false,
         formatUpdated: '{YYYY}-{MM}-{DD}',
         showLevel: true,
         tocLevel: 3,
+        ext: ".md",
+        paths: 'auto',
         plugins: [
-            window.DocsifyCopyCodePlugin.init()
+            // window.DocsifyCopyCodePlugin.init()
         ]
     }
 </script>
@@ -53,6 +54,6 @@
 <script src="assets/plugins/highlight.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
-<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+
 </body>
 </html>
